--- a/pages/register.html
+++ b/pages/register.html
@@ -10,17 +10,18 @@
 
 <body>
     <div class="container">
-        <h1>Đăng kí tài khoản</h1>
+        <h1>Đăng ký tài khoản</h1>
         <input type="email" id="email" placeholder="Tên tài khoản">
-        <input type="password"  id="password" placeholder="Mật khẩu ">
-        <input type="password" id="confirmPassword" placeholder="Xác nhận Mật khẩu ">
-        <button class="item1" onclick="login()">Đăng kí</button>
+        <input type="password" id="password" placeholder="Mật khẩu">
+        <input type="password" id="confirmPassword" placeholder="Xác nhận Mật khẩu">
+        <button class="item1" onclick="register()">Đăng ký</button> 
+        
         <div class="contai">
-            <p>Đã có tài khoản ?</p>
+            <p>Đã có tài khoản?</p>
             <button class="item2" onclick="login()">Đăng nhập</button>
         </div>
     </div>
-    <script src="../js/login.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 
 </html>
